- Compiler flag fix for building on GNU/kFreeBSD systems (Hendrik Frenzel)
- Added lock_file option
- Fix debug file permission race (Lars Michelsen)
- More error reporting if debug file can not be opened
- Fix wait for childs on SIGCHLD
- Added long_output support
- Fix missing SIGTERM forwarding to childs
- Fix fmt specifier in ndo2db_daemonize()

1.4b7 - 10/31/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6
- Makefile fixes for compilation flags
- Fix for bug where service check table always had same start/end time
- Added sample init script for SLES (Bruno Quintais)
- Added --with-ndo2db-user and --with-ndo2db-group configure script options
- Fix for configfilevariables table not holding multiple entries for various variables
- Changed/added indexes on various DB tables
- Added some very basic debug file capabilities (not complete yet)
- Fix for handling (backwards) system time changes
- Fix for missing SUN_LEN definition and strtof() functions on Solaris 8 (Christian Masopust)
- Fix for segfault when importing duplicate log file entries (Hendrik Frenzel)
- Updated to support latest Nagios 3.x code (3.0b6)



1.4b6 - 09/27/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b4
- Updated to support latest Nagios 3.x code (3.0b4)
- Added source OpenOffice docs in addition to PDFs
- Fix for segfault while processing host status/event information



1.4b5 - 08/29/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b2
- Reintroduced contactgroup associations with host, service, and escalation definitions
- Adjustments for data structure changes made in Nagios 3.0b2
- Fix for missing math libraries during compilation (Dominic Settele)
- Changed MySQL db table types from MyISAM to InnoDB
- Updated to latest Nagios 3.x include files (3.0b2)



1.4b4 - 06/19/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0a5